kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/pack_relative_with_alias/src/foo/mod.k
use mod as boo;

mod bar;
use bar.*;
use Nat.*;

let plus = fun plus(-a: Nat, b: Nat): Nat {
    match a {
        .o => b,
        .s(a') => s(plus(a', b)),
    }
};
