kanc/src/tests/sample_code/should_fail/multi_file/bind/use_identifier_as_is/src/mod.k
mod nat;
use nat.Blat;

let plus = fun plus(-a: Blat, b: Blat): Blat {
    match a {
        o => b,
        s(a') => Blat.s(plus(a', b)),
    }
};
